tests/ui/parser/item-kw-case-mismatch.stderr
error: keyword `use` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:7:1
   |
LL | Use std::ptr::read;
   | ^^^
   |
help: write it in the correct case (notice the capitalization)
   |
LL - Use std::ptr::read;
LL + use std::ptr::read;
   |

error: keyword `use` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:8:1
   |
LL | USE std::ptr::write;
   | ^^^
   |
help: write it in the correct case
   |
LL - USE std::ptr::write;
LL + use std::ptr::write;
   |

error: keyword `fn` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:10:7
   |
LL | async Fn _a() {}
   |       ^^
   |
help: write it in the correct case (notice the capitalization)
   |
LL - async Fn _a() {}
LL + async fn _a() {}
   |

error: keyword `fn` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:13:1
   |
LL | Fn _b() {}
   | ^^
   |
help: write it in the correct case (notice the capitalization)
   |
LL - Fn _b() {}
LL + fn _b() {}
   |

error: keyword `async` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:16:1
   |
LL | aSYNC fN _c() {}
   | ^^^^^
   |
help: write it in the correct case
   |
LL - aSYNC fN _c() {}
LL + async fN _c() {}
   |

error: keyword `fn` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:16:7
   |
LL | aSYNC fN _c() {}
   |       ^^
   |
help: write it in the correct case
   |
LL - aSYNC fN _c() {}
LL + aSYNC fn _c() {}
   |

error: keyword `async` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:20:1
   |
LL | Async fn _d() {}
   | ^^^^^
   |
help: write it in the correct case
   |
LL - Async fn _d() {}
LL + async fn _d() {}
   |

error: keyword `const` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:23:1
   |
LL | CONST UNSAFE FN _e() {}
   | ^^^^^
   |
help: write it in the correct case
   |
LL - CONST UNSAFE FN _e() {}
LL + const UNSAFE FN _e() {}
   |

error: keyword `unsafe` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:23:7
   |
LL | CONST UNSAFE FN _e() {}
   |       ^^^^^^
   |
help: write it in the correct case
   |
LL - CONST UNSAFE FN _e() {}
LL + CONST unsafe FN _e() {}
   |

error: keyword `fn` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:23:14
   |
LL | CONST UNSAFE FN _e() {}
   |              ^^
   |
help: write it in the correct case
   |
LL - CONST UNSAFE FN _e() {}
LL + CONST UNSAFE fn _e() {}
   |

error: keyword `unsafe` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:28:1
   |
LL | unSAFE EXTern "C" fn _f() {}
   | ^^^^^^
   |
help: write it in the correct case
   |
LL - unSAFE EXTern "C" fn _f() {}
LL + unsafe EXTern "C" fn _f() {}
   |

error: keyword `extern` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:28:8
   |
LL | unSAFE EXTern "C" fn _f() {}
   |        ^^^^^^
   |
help: write it in the correct case
   |
LL - unSAFE EXTern "C" fn _f() {}
LL + unSAFE extern "C" fn _f() {}
   |

error: keyword `extern` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:32:1
   |
LL | EXTERN "C" FN _g() {}
   | ^^^^^^
   |
help: write it in the correct case
   |
LL - EXTERN "C" FN _g() {}
LL + extern "C" FN _g() {}
   |

error: keyword `fn` is written in the wrong case
  --> $DIR/item-kw-case-mismatch.rs:32:12
   |
LL | EXTERN "C" FN _g() {}
   |            ^^
   |
help: write it in the correct case
   |
LL - EXTERN "C" FN _g() {}
LL + EXTERN "C" fn _g() {}
   |

error: aborting due to 14 previous errors

